--- a/style.css
+++ b/style.css
@@ -210,7 +210,7 @@ tr {
     text-align: center;
     font-size: 1.5vw;
     font-weight: 700;
-    animation: fadeInAnimation ease 3s;
+    animation: fadeInAnimation ease 7.5s;
     animation-iteration-count: 1;
     animation-fill-mode: forwards;
 }
@@ -227,6 +227,9 @@ tr {
     text-align: center;
     display: flex;
     flex-direction: row;
+    animation: fadeInAnimation ease 8s;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;
 }
 
 .fanatical-img {
