--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ html {
 }
 
 body {
-    background: black;
+    background-color: black;
     color: white;
     font-family: 'Poppins', sans-serif;
     font-weight: 300;
@@ -88,23 +88,6 @@ tr {
     font-size: 1.2vw;
 }
 
-::-webkit-scrollbar {
-    width: 10px;
-}
-  
-::-webkit-scrollbar-track {
-    background: black;
-}
-  
-::-webkit-scrollbar-thumb {
-    background: #d6dadd;
-    border-radius: 50px;
-}
-  
-::-webkit-scrollbar-thumb:hover {
-    background: white;
-}
-
 #me {
     font-size: 0.8vw;
     color: white;
@@ -138,5 +121,6 @@ tr {
     bottom: 0;
     width: 100%;
     color: white;
+    background-color: black;
     text-align: center;
 }
